--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -44,8 +44,8 @@ jobs:
       - run: |
           git config --global user.email ci-bot@argocd.com && git config --global user.name ci-bot
           echo "cloning app repo"
-          git clone https://oauth2:${{ secrets.GH_PAT }}@github.com/${{ github.repository_owner }}/argocd-course-webapp.git
-          cd argocd-course-webapp
+          git clone https://oauth2:${{ secrets.GH_PAT }}@github.com/${{ github.repository_owner }}/argocd-webapp.git
+          cd argocd-webapp
           echo "checkout source branch"
           git checkout ${{ github.event.pull_request.head.ref }}
           echo "updating image tag in values file"
